--- a/.artifacts/spec-tasks-T-05-02-typescript-bindings/metadata.yaml
+++ b/.artifacts/spec-tasks-T-05-02-typescript-bindings/metadata.yaml
@@ -36,10 +36,14 @@ git:
       message: "feat(agent): T-05-02 - complete TypeScript client bindings & SDK integration"
       date: "2025-10-23"
       files_changed: 18
+    - hash: "38c1e75"
+      message: "fix(agent): add JSON-RPC response ID validation per PR review"
+      date: "2025-10-23"
+      files_changed: 3
   pr:
-    number: null
-    url: null
-    status: null
+    number: 5
+    url: "https://github.com/lwyBZss8924d/CDSAgent/pull/5"
+    status: "in_review"
     merged_at: null
 
 dependencies:
@@ -84,11 +88,11 @@ worklog:
 
 metrics:
   estimated_hours: 24
-  actual_hours: 9
-  lines_added: 3041
-  lines_deleted: 287
-  files_modified: 18
-  tests_added: 11
+  actual_hours: 9.5
+  lines_added: 3060
+  lines_deleted: 295
+  files_modified: 19
+  tests_added: 12
   test_coverage: 0.0
 
 comments:
@@ -98,6 +102,9 @@ comments:
   - date: "2025-10-23"
     author: "Claude Code Agent"
     text: "Generated TypeScript bindings, JSON-RPC client, and unit tests; beginning integration with agent runtime."
+  - date: "2025-10-23"
+    author: "Claude Code Agent"
+    text: "Addressed PR review feedback: added JSON-RPC response ID validation for security (P1 issue)"
 
 related_artifacts:
   - type: "documentation"
